--- a/styles.css
+++ b/styles.css
@@ -3,39 +3,88 @@
   padding: 0;
 }
 
+body {
+  background-color: hsl(185, 75%, 39%);
+}
+
+p {
+  font-family: "Kumbh Sans", sans-serif;
+}
+
+hr {
+  margin-top: 25px;
+  border-color: (0, 0%, 92%);
+}
+
 .card {
+  text-align: center;
+  width: 335px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  border-radius: 45px;
-  text-align: center;
+  border-radius: 15px;
+  background-color: white;
+  margin: 150px auto auto;
 }
 
 .card-header {
   height: 100px;
 }
 
+.border-radius-top {
+  width: 335px;
+  height: 150px;
+  border-radius: 15px 15px 0 0;
+  margin-left: 0;
+}
+
 .img-cropper {
-  width: 90px;
-  height: 90px;
-  /* position: relative; */
+  display: block;
+  width: 96px;
+  height: 96px;
   overflow: hidden;
   border-radius: 50%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  /* width: 50%; */
+  margin: 0 auto 35px;
 }
 
-body {
-  margin-top: 100px;
+.card-body {
+  margin: 40px, 0, 50px, 0;
 }
 
-.flex {
+.card-footer {
   display: flex;
-
-  justify-content: center;
+  justify-content: space-around;
+  margin: 5px 0 50px 0;
+  padding: 25px 0 20px 0;
 }
 
 .flex-row {
   flex-direction: row;
+  justify-content: space-around;
+}
+
+.font-size {
+  font-size: 18px;
+}
+
+.bold-font {
+  font-weight: 700;
+}
+.light-font {
+  font-weight: 400;
+}
+
+.grey-font {
+  color: hsl(0, 0%, 59%);
+}
+
+.padding-top {
+  padding-top: 10px;
+}
+
+.padding-left {
+  padding-left: 4px;
+}
+
+.small-font {
+  font-size: 12px;
 }
